# arxiv-daily

./: config.yaml  main.py  prompts.py  pyproject.toml  utils.py
.github/workflows/: arxiv-daily.yml
