[project]
name = "arxiv-daily"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=2.2.0",
    "openai>=2.1.0",
    "python-dotenv>=1.1.1",
]

[tool.arxiv_daily.app]
timezone = "Europe/Rome"
query = "astro-ph.SR"
research_interests = ["population synthesis studies", "gravitational waves", "N-body simulations", "star clusters", "binary stars and binary-star processes", "mass transfer (stable/unstable)", "stellar winds", "black-hole astrophysics"]
max_results = 20
llm_base_url = "https://api.openai.com/v1"
llm_model_name = "gpt-5-mini"
